<resources>
    <string name="app_name">Smarty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="smarty">Smarty</string>
    <string name="drawer_description">Ο ψηφιακός σου βοηθός</string>
    <string name="nav_home">Αρχική</string>
    <string name="nav_planner">Πλάνο</string>
    <string name="nav_pets">Κατοικίδια</string>
    <string name="nav_notifications">Ειδοποιήσεις</string>
    <string name="home_title">Αρχική</string>
    <string name="planner_title">Το Πλάνο μου</string>
    <string name="profile_title">Προφίλ</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="dummy_greeting">Καλησπέρα Γιάννη</string>
    <string name="dummy_full_date">Κυριακή, 9 Οκτωβρίου 2022</string>
    <string name="living_room">Σαλόνι</string>
    <string name="kitchen">Κουζίνα</string>
    <string name="garden">Κήπος</string>
    <string name="main_bedroom">Κρεβατοκάμαρα #1</string>
    <string name="sons_room">Παιδικό Δωμάτιο #1</string>
    <string name="daughters_room">Παιδικό Δωμάτιο #2</string>
    <string name="rooms_info">Σε αυτή την οθόνη εμφανίζονται οι δυνατότητες που έχει ο χρήστης στο συγκεκριμένο δωμάτιο. \n\nΠατώντας την αντίστοιχη ενότητα, μπορείτε να έχετε τον έλεγχο του σπιτιού σας κατευθείαν απο το κινητό!</string>
    <string name="continue_btn">Συνέχεια</string>
    <string name="ok">OK</string>
    <string name="yes">Ναι</string>
    <string name="no">Όχι</string>
    <string name="menu_info">Info</string>
    <string name="menu_add">Add</string>
    <string name="planner_info">Σε αυτή την οθόνη εμφανίζονται τα συμβάντα που έχετε προσθέσει ανά ημέρα. \n\nΠατώντας το εικονίδιο (+) μπορείτε να δημιουργήσετε ένα νέο.</string>
    <string name="dummy_transport_type">Μετακίνηση με αυτοκίνητο</string>
    <string name="dummy_date">19/09/2022</string>
    <string name="dummy_time">09:00</string>
    <string name="planner_no_results_message">Δεν βρέθηκαν συμβάντα. Πρόσθεσε ένα νέο πατώντας το (+) κάτω δεξιά</string>
    <string name="events_intro_title">Νέο Γεγονός | Περιγραφή</string>
    <string name="events_transport_title">Νέο Γεγονός | Μετακίνηση</string>
    <string name="events_traffic_title">Νέο Γεγονός | Οδηγίες</string>
    <string name="events_additionals_title">Πρόσθετα</string>
    <string name="events_shops_title">Επιλογή Καταστήματος</string>
    <string name="events_coffee_title">Επιλογή Καφέ</string>
    <string name="events_parking_promo_title">Αναζήτηση Θέσης Parking</string>
    <string name="events_parking_slot_title">Θέση Parking</string>
    <string name="events_overview_title">Σύνοψη</string>
    <string name="events_result_title">Νέο Γεγονός | Επιτυχία</string>
    <string name="events_intro_desc">Προσθήκη Τίτλου</string>
    <string name="events_intro_label">Τίτλος</string>
    <string name="events_error_msg">Ο τίτλος δεν μπορεί να είναι κενός</string>
    <string name="events_location_error_msg">Η τοποθεσία δεν μπορεί να είναι κενή</string>
    <string name="events_intro_error_msg">Δεν είναι όλα τα απαραίτητα πεδία συμπληρωμένα</string>
    <string name="select_date">Επιλογή ημέρομηνίας</string>
    <string name="date">Ημερομηνία</string>
    <string name="time">Ώρα</string>
    <string name="events_intro_location">Τοποθεσία</string>
    <string name="transport_screen_title">Πώς θα γίνει η μετάβαση;</string>
    <string name="transport_train">Με Μετρό</string>
    <string name="transport_car">Με Αυτοκίνητο</string>
    <string name="transport_bus">Με Λεωφορείο</string>
    <string name="transport_bike">Με Ποδήλατο</string>
    <string name="transport_walk">Με τα πόδια</string>
    <string name="estimated_time_minutes">%s λεπτά</string>
    <string name="transport_fastest_option">Βέλτιστη Επιλογή</string>
    <string name="additionals_header">Θα χρειαστείς καφέ;</string>
    <string name="additionals_desc">Μια μέρα χωρίς καφέ είναι μια μέρα χαμένη. Παράγγειλε τον αγαπημένο σου καφέ μέσα απο την εφαρμογή.</string>
    <string name="test">Θα χρειαστείς καφέ;</string>
    <string name="additionals_primary_btn">Επιλογή Καταστήματος</string>
    <string name="additionals_secondary_btn">Όχι τώρα</string>
    <string name="parking_promo_header">Parking εύκολα και γρήγορα</string>
    <string name="parking_promo_desc">Τώρα μπορείς να βρεις γρήγορα και εύκολα την κοντινότερη θέση parking βάσει του προορισμού σου.</string>
    <string name="parking_promo_search_btn">Αναζήτηση Θέσης Parking</string>
    <string name="parking_slot_header">Η θέση σου είναι έτοιμη!</string>
    <string name="parking_slot_dummy">D24</string>
    <string name="coffee_island">Coffee Island</string>
    <string name="coffee_lab">Coffee Lab</string>
    <string name="coffee_hoop">Coffee Hoop</string>
    <string name="gregorys">Γρηγόρης</string>
    <string name="mikel">Mikel</string>
    <string name="coffee_berry">Coffee Berry</string>
    <string name="shop_range">%dm μακριά</string>
    <string name="shop_serving_time">Αναμονή %d λεπτά</string>
    <string name="freddo_espresso">Freddo Espresso</string>
    <string name="freddo_cappuccino">Freddo Cappuccino</string>
    <string name="espresso">Espresso</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="latte">Latte</string>
    <string name="nes">Nes</string>
    <string name="flat_white">Flat white</string>
    <string name="frappe">Frappe</string>
    <string name="filtered_v60">Φίλτρου V60</string>
    <string name="greek_coffee">Ελληνικός</string>
    <string name="coffee_price_euros">%,.2f€</string>
    <string name="coffee_no_sugar">Σκέτος</string>
    <string name="coffee_medium_sugar">Μέτριος</string>
    <string name="coffee_sweet">Γλυκός</string>
    <string name="sugar_selection_header">Επίλεξε Ζάχαρη</string>
    <string-array name="sugar_types">
        <item>Σκέτος</item>
        <item>Μέτριος</item>
        <item>Γλυκός</item>
    </string-array>
    <string name="traffic_info">Κίνηση στους δρόμους</string>
    <string name="traffic_low">Χαμηλή</string>
    <string name="traffic_medium">Κανονική</string>
    <string name="traffic_high">Αυξημένη</string>
    <string name="coffee_order">Παραγγελία Καφέ</string>
    <string name="coffee_title_with_sugar">%s %s</string>
    <string name="transport_type">Τρόπος Μετακίνησης</string>
    <string name="parking_slot">Θέση Parking</string>
    <string name="total_moving_time">Συνολικός Χρόνος Μετακίνησης</string>
    <string name="add_to_planner">Προσθήκη στο Planner μου</string>
    <string name="moving_time_estimation">Για να βρίσκεσαι εκεί στις %s θα πρέπει να ξεκινήσεις στις %s</string>
    <string name="save_event_error_msg">Υπήρξε κάποιο πρόβλημα με την αποθήκευση του event.</string>
    <string name="dummy_card_no">**** **** **** 1234</string>
    <string name="dummy_card_holder">T. TESTOPOULOS</string>
    <string name="pay_with_e_wallet">Πληρωμή μέσω e-wallet</string>
    <string name="payment_details">Στοιχεία Πληρωμής</string>
    <string name="event_success">Το event δημιουργήθηκε!</string>
    <string name="event_result_desc">Το event που περιέγραψες προστέθηκε στον ψηφιακό σου βοηθό ημέρας. Είσαι έτοιμος!</string>
    <string name="event_overview_btn">Επιστροφή στο Ημερολόγιο</string>
    <string name="event_notification_desc">Προσθέσατε ένα νέο event με όνομα %s στις %s</string>
    <string name="wardrobe_events_title">Τα συμβάντα μου</string>
    <string name="wardrobe_intro_title">Επιλογή Κατηγορίας</string>
    <string name="wardrobe_choose_shoes">Επιλογή παπουτσιών</string>
    <string name="add_shoe_purchase">Αγόρασε ενα νέο ζευγάρι παπούτσια</string>
    <string name="add_shoes_to_event">Θα ήθελες να συσχετίσεις τα παπούτσια με το event;</string>
    <string name="purchase_shoes_title">Αγορά νέου ζευγαριού</string>
    <string name="wardrobe_eshops_title">Επιλογή E-shop</string>
    <string name="dummy_eshop_title">Intersport</string>
    <string name="order_screen_title">Σύνοψη Παραγγελίας</string>
    <string name="address_info">Στοιχεία Αποστολής</string>
    <string name="product_description">Περιγραφή Προιόντος</string>
    <string name="eshop_title">Ηλεκτρονικό Κατάστημα</string>
    <string name="rating_text">%,.1f/5</string>
    <string name="order_result_screen_title">Ολοκλήρωση Παραγγελίας</string>
    <string name="return_to_dashboard">Επιστροφή στην αρχική</string>
    <string name="order_result_title">Η παραγγελία σου στάλθηκε</string>
    <string name="order_result_description">Το ηλεκτρονικό κατάστημα έχει παραλάβει την παραγγελία σου και θα ενημερωθείς για την εξέλιξη της μέσω e-mail</string>
    <string name="success">Επιτυχία</string>
    <string name="result_event_updated">Το event ανανεώθηκε</string>
    <string name="wardrobe_notification_desc">Συσχετίσατε το παπούτσι %s με το event %s</string>
    <string name="wardrobe_order_notification_desc">Παραγγείλατε ένα νέο ζευγάρι παπούτσια %s απο το eshop %s</string>
    <string name="room_into_title">Επιλογή Δωματίου</string>
    <string name="room_util_title">Επιλογή Ενέργειας</string>
    <string name="lights_screen_title">Φωτισμός</string>
    <string name="lights_management_title">Ενεργοποίηση Φωτισμού</string>
    <string name="lights_on_msg">Τα φώτα άναψαν!</string>
    <string name="lights_out_msg">Τα φώτα έσβησαν!</string>
    <string name="issue_occured">Παρουσιάστηκε κάποιο πρόβλημα</string>
    <string name="temperature_screen_title">Θερμοκρασία</string>
    <string name="max_heat_reached">Δεν μπορεί να πάει πιο πάνω η θερμοκρασία</string>
    <string name="min_heat_reached">Δεν μπορεί να πάει πιο κάτω η θερμοκρασία</string>
    <string name="dummy_temperature">21°C</string>
    <string name="active">Ενεργοποιημένο</string>
    <string name="not_active">Απενεργοποιημένο</string>
    <string name="temperature_celcius">%d°C</string>
    <string name="activate_aircondition_msg">Ενεργοποίησε το aircondition πρώτα</string>
    <string name="tv_screen_title">Τηλεόραση</string>
    <string name="oven">Φούρνος</string>
    <string name="fridge">Ψυγείο</string>
    <string name="coffee_machine">Καφετιέρα</string>
    <string name="music">Μουσική</string>
    <string name="water_plants">Πότισμα Φυτών</string>
    <string name="garage_door">Πόρτα Γκαράζ</string>
    <string name="pet_details_screen_title">Πληροφορίες Κατοικιδίου</string>
    <string name="dummy_pet_title">Makis</string>
    <string name="dummy_pet_type">CAT</string>
    <string name="faq_screen_title">Συχνές Ερωτήσεις</string>
    <string name="new_event">Νέο συμβάν</string>
    <string name="smart_wardrobe">Έξυπνη Παπουτσοθήκη</string>
    <string name="rooms">Δωμάτια</string>
    <string name="no_active_devices">Καμία ενεργή συσκευή</string>
    <string name="one_active_device">1 ενεργή συσκευή</string>
    <string name="many_active_device">%d ενεργές συσκευές</string>
    <string name="energy_management_title">Ενεργειακή Κατανάλωση</string>
    <string name="energy_list_header">Ανάλυση κατανάλωσης ανα μήνα</string>
    <string name="energy_consumption_kwh">%d kWh</string>
    <string name="song_title">Thunderstruck</string>
    <string name="song_band">AC/DC</string>
    <string name="song_start_time">00:25</string>
    <string name="song_end_time">03:25</string>
    <string name="homepod_on">Το Homepod ενεργοποιήθηκε</string>
    <string name="homepod_off">To Homepod απενεργοποιήθηκε</string>
    <string name="pet_feed_result_desc">Η ενέργεια πραγματοποιήθηκε με επιτυχία</string>
    <string name="pet_feed_result_cta">Επιστροφή στα κατοικίδια</string>
    <string name="feed_planner_title">Προγραμματισμός Ταίστρας</string>
    <string name="feed_planner_desc">Πλέον έχετε την δυνατότητα να ταίσετε ή να γεμίσετε το μπωλ του κατοικιδίου σας είτε αυτή τη στιγμή είτε σε συγκεκριμένη μέρα και ώρα.</string>
    <string name="feed_planner_btn">Άμεσο ταίσμα</string>
    <string name="feed_planner_schedule_btn">Μεταχρονολογημένο ταίσμα</string>
</resources>