<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/dimen_l">

    <TextView
        android:id="@+id/paymentHeaderTxtView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/pay_with_e_wallet"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_l"
        app:cardCornerRadius="@dimen/dimen_m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentHeaderTxtView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/unipi_blue"
            android:padding="@dimen/dimen_m">

            <ImageView
                android:id="@+id/visaImgView"
                android:layout_width="@dimen/dimen_xl"
                android:layout_height="@dimen/dimen_xl"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/mastercard"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trafficHeaderTxtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dimen_xs"
                android:paddingStart="@dimen/dimen_m"
                android:text="@string/dummy_card_no"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/visaImgView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/trafficDescTxtView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen_m"
                android:text="@string/dummy_card_holder"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/visaImgView"
                app:layout_constraintTop_toBottomOf="@id/trafficHeaderTxtView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_l"
        android:background="@color/purple_700"
        android:text="@string/continue_btn"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/paymentCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>