<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_l"
        tools:context=".ui.feed.schedule.FeedScheduleFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/plannerImgView"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_180"
            android:padding="@dimen/dimen_m"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/feed_cat" />

        <TextView
            android:id="@+id/plannerHeaderTxtView"
            style="@style/text_22_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_m"
            android:text="@string/feed_planner_title"
            app:layout_constraintTop_toBottomOf="@id/plannerImgView" />

        <TextView
            android:id="@+id/plannerDescTxtView"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_s"
            android:text="@string/feed_planner_desc"
            app:layout_constraintTop_toBottomOf="@id/plannerHeaderTxtView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/feedNowBtn"
                style="@style/primaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_s"
                android:text="@string/feed_planner_btn"
                app:layout_constraintBottom_toTopOf="@id/feedLaterBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/feedLaterBtn"
                style="@style/secondaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_planner_schedule_btn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>