<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/dimen_l"
        tools:context=".ui.feed.result.PetResultFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/successImgView"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_180"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/dimen_m"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/feed_cat" />

        <TextView
            android:id="@+id/successHeaderTxtView"
            style="@style/text_22_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_m"
            android:text="@string/success"
            app:layout_constraintTop_toBottomOf="@id/successImgView" />

        <TextView
            android:id="@+id/successDescTxtView"
            style="@style/text_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_s"
            android:text="@string/pet_feed_result_desc"
            app:layout_constraintTop_toBottomOf="@id/successHeaderTxtView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/returnToPetsBtn"
            style="@style/primaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pet_feed_result_cta"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>