<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_l"
        tools:context=".ui.events.parking.ParkingPromoFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/parkingImgView"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_180"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/parking" />

        <TextView
            android:id="@+id/parkingHeaderTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_m"
            android:text="@string/parking_promo_header"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/parkingImgView" />

        <TextView
            android:id="@+id/parkingDescTxtView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/dimen_s"
            android:text="@string/parking_promo_desc"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/parkingHeaderTxtView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/searchForParkingSlotButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_s"
                android:background="@color/purple_700"
                android:text="@string/parking_promo_search_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/notNowButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/notNowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/purple_700"
                android:text="@string/additionals_secondary_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>